package config;

message RouterSvrConfig {
	optional int32 log_level = 1;
}
